# services/conservation/v1beta1/api.pb.go
@@ -108,24 +108,25 @@ func init() {
 func init() { proto.RegisterFile("api.proto", fileDescriptor_00212fb1f9d3bf1c) }
 
 var fileDescriptor_00212fb1f9d3bf1c = []byte{
-	// 263 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x90, 0xd1, 0x4a, 0xc3, 0x30,
-	0x18, 0x85, 0x49, 0x37, 0x37, 0x17, 0x44, 0xca, 0x2f, 0x8e, 0x52, 0xbd, 0x28, 0xbb, 0xea, 0x85,
-	0x24, 0x56, 0x1f, 0x61, 0xdb, 0xc5, 0xc0, 0xab, 0x7a, 0x2d, 0x23, 0xad, 0xbf, 0x23, 0xb8, 0x25,
-	0xa1, 0xfd, 0x57, 0xf0, 0xd6, 0x47, 0xd0, 0x47, 0xf3, 0x15, 0x7c, 0x10, 0x69, 0xda, 0x41, 0xbd,
-	0xcb, 0x39, 0xdf, 0x49, 0x38, 0x27, 0x7c, 0xa6, 0x9c, 0x16, 0xae, 0xb2, 0x64, 0x61, 0xda, 0x64,
-	0x05, 0x92, 0xca, 0xe2, 0xdb, 0x9d, 0xb5, 0xbb, 0x3d, 0x4a, 0xe5, 0xb4, 0x54, 0xc6, 0x58, 0x52,
-	0xa4, 0xad, 0xa9, 0xbb, 0x58, 0x7c, 0xd3, 0x53, 0xaf, 0x8a, 0xe3, 0x9b, 0xc4, 0x83, 0xa3, 0x8f,
-	0x0e, 0x2e, 0xbe, 0x18, 0xbf, 0x58, 0x5a, 0x53, 0x63, 0xd5, 0xf8, 0x4b, 0x70, 0xc9, 0x83, 0xcd,
-	0x2a, 0x62, 0x09, 0x4b, 0x47, 0x79, 0xb0, 0x59, 0x41, 0xc4, 0xa7, 0x65, 0x85, 0x8a, 0xf0, 0x35,
-	0x0a, 0x12, 0x96, 0xce, 0xf2, 0x93, 0x04, 0xe0, 0xe3, 0x1a, 0x0d, 0x45, 0x23, 0x9f, 0xf5, 0x67,
-	0x98, 0xf3, 0xc9, 0xd1, 0x78, 0x77, 0xec, 0xdd, 0x5e, 0xc1, 0x1d, 0x87, 0x77, 0x44, 0xb7, 0xc5,
-	0x83, 0xd2, 0xfb, 0x6d, 0x69, 0x0d, 0xb5, 0x99, 0xb3, 0x84, 0xa5, 0xe7, 0x79, 0xd8, 0x92, 0x75,
-	0x0b, 0x96, 0x9d, 0xff, 0x40, 0xfc, 0x6a, 0xd8, 0xe9, 0x19, 0xab, 0x46, 0x97, 0x08, 0x2f, 0x3c,
-	0x7c, 0xd2, 0x35, 0xfd, 0xab, 0x3b, 0x17, 0xdd, 0x3a, 0x71, 0x5a, 0x27, 0xd6, 0xed, 0xba, 0xf8,
-	0x5a, 0xf4, 0x9f, 0x23, 0x86, 0xf1, 0x45, 0xf4, 0xf9, 0xf3, 0xfb, 0x1d, 0x00, 0x84, 0xb2, 0xc9,
-	0x64, 0x39, 0x20, 0xf7, 0xac, 0x98, 0xf8, 0x27, 0x1e, 0xff, 0x02, 0x00, 0x00, 0xff, 0xff, 0x60,
-	0xa2, 0x77, 0x6e, 0x62, 0x01, 0x00, 0x00,
+	// 287 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x74, 0x50, 0xcf, 0x4a, 0xc3, 0x30,
+	0x1c, 0x26, 0xdd, 0xdc, 0x5c, 0x10, 0x29, 0x3f, 0xd9, 0x28, 0x9d, 0x87, 0xd2, 0x53, 0x11, 0x49,
+	0xad, 0xde, 0xbc, 0x76, 0x3b, 0x0c, 0x3c, 0xd5, 0xb3, 0x94, 0xb4, 0xfe, 0x1c, 0xc1, 0x2d, 0x29,
+	0x6d, 0x56, 0xf0, 0xea, 0x23, 0xe8, 0xa3, 0x89, 0x6f, 0xe0, 0x83, 0x48, 0xd3, 0x0e, 0x3a, 0x74,
+	0xb7, 0x7c, 0x7f, 0xf2, 0xe5, 0xfb, 0x42, 0x27, 0xbc, 0x10, 0xac, 0x28, 0x95, 0x56, 0x30, 0xae,
+	0xa3, 0x0c, 0x35, 0x8f, 0xdc, 0xcb, 0xb5, 0x52, 0xeb, 0x0d, 0x86, 0xbc, 0x10, 0x21, 0x97, 0x52,
+	0x69, 0xae, 0x85, 0x92, 0x55, 0x6b, 0x73, 0xe7, 0x9d, 0x6a, 0x50, 0xb6, 0x7b, 0x09, 0x71, 0x5b,
+	0xe8, 0xb7, 0x56, 0xf4, 0x3f, 0x08, 0x3d, 0x8b, 0x95, 0xac, 0xb0, 0xac, 0xcd, 0x25, 0x38, 0xa7,
+	0xd6, 0x6a, 0xe1, 0x10, 0x8f, 0x04, 0x83, 0xc4, 0x5a, 0x2d, 0xc0, 0xa1, 0xe3, 0xbc, 0x44, 0xae,
+	0xf1, 0xd9, 0xb1, 0x3c, 0x12, 0x4c, 0x92, 0x3d, 0x04, 0xa0, 0xc3, 0x0a, 0xa5, 0x76, 0x06, 0xc6,
+	0x6b, 0xce, 0x30, 0xa3, 0xa3, 0x9d, 0x34, 0xec, 0xd0, 0xb0, 0x1d, 0x82, 0x6b, 0x0a, 0xaf, 0x88,
+	0x45, 0x8a, 0x5b, 0x2e, 0x36, 0x69, 0xae, 0xa4, 0x6e, 0x3c, 0x27, 0x1e, 0x09, 0x4e, 0x13, 0xbb,
+	0x51, 0x96, 0x8d, 0x10, 0xb7, 0xfc, 0xed, 0x37, 0xa1, 0x17, 0xfd, 0x52, 0x8f, 0x58, 0xd6, 0x22,
+	0x47, 0x78, 0xa2, 0xf6, 0x83, 0xa8, 0xf4, 0x41, 0xdf, 0x19, 0x6b, 0xe7, 0xb1, 0xfd, 0x3c, 0xb6,
+	0x6c, 0xe6, 0xb9, 0x53, 0xd6, 0xfd, 0x0e, 0xeb, 0xdb, 0x7d, 0xe7, 0xfd, 0xeb, 0xe7, 0xd3, 0x02,
+	0xb0, 0xc3, 0x3a, 0x0a, 0xf3, 0x9e, 0x72, 0x43, 0x20, 0xa5, 0x10, 0x9b, 0x6d, 0x07, 0x0f, 0xfc,
+	0x1f, 0x74, 0x2c, 0x7f, 0x6e, 0xf2, 0xa7, 0xfe, 0x9f, 0xfc, 0x7b, 0x72, 0x95, 0x8d, 0x4c, 0xc7,
+	0xbb, 0xdf, 0x00, 0x00, 0x00, 0xff, 0xff, 0x39, 0xc4, 0x5a, 0x59, 0xc4, 0x01, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -142,6 +143,8 @@ const _ = grpc.SupportPackageIsVersion4
 type ConservationServiceClient interface {
 	// ListConservation returns a stream of List of Conservation
 	ListConservation(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (ConservationService_ListConservationClient, error)
+	// CreateConservation insert a conservation in dataset
+	CreateConservation(ctx context.Context, in *Conservation, opts ...grpc.CallOption) (*Conservation, error)
 }
 
 type conservationServiceClient struct {
@@ -184,10 +187,21 @@ func (x *conservationServiceListConservationClient) Recv() (*Conservation, error
 	return m, nil
 }
 
+func (c *conservationServiceClient) CreateConservation(ctx context.Context, in *Conservation, opts ...grpc.CallOption) (*Conservation, error) {
+	out := new(Conservation)
+	err := c.cc.Invoke(ctx, "/v1beta1.ConservationService/CreateConservation", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ConservationServiceServer is the server API for ConservationService service.
 type ConservationServiceServer interface {
 	// ListConservation returns a stream of List of Conservation
 	ListConservation(*empty.Empty, ConservationService_ListConservationServer) error
+	// CreateConservation insert a conservation in dataset
+	CreateConservation(context.Context, *Conservation) (*Conservation, error)
 }
 
 func RegisterConservationServiceServer(s *grpc.Server, srv ConservationServiceServer) {
@@ -215,10 +229,33 @@ func (x *conservationServiceListConservationServer) Send(m *Conservation) error 
 	return x.ServerStream.SendMsg(m)
 }
 
+func _ConservationService_CreateConservation_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Conservation)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ConservationServiceServer).CreateConservation(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/v1beta1.ConservationService/CreateConservation",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ConservationServiceServer).CreateConservation(ctx, req.(*Conservation))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _ConservationService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "v1beta1.ConservationService",
 	HandlerType: (*ConservationServiceServer)(nil),
-	Methods:     []grpc.MethodDesc{},
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateConservation",
+			Handler:    _ConservationService_CreateConservation_Handler,
+		},
+	},
 	Streams: []grpc.StreamDesc{
 		{
 			StreamName:    "ListConservation",
